# snake-spectacle

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  index.html  openapi.yaml  package-lock.json  package.json  render.yaml
backend/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  verify_api.py  verify_db.py
backend/app/: config.py  database.py  db_models.py  main.py  models.py
backend/app/routers/: auth.py  leaderboard.py  players.py
backend/tests/: test_api.py
backend/tests_integration/: conftest.py  test_auth.py  test_leaderboard.py  test_players.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/__tests__/: api.test.ts  gameLogic.test.ts
frontend/src/components/ui/: input.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: gameLogic.ts
frontend/src/services/: api.ts
frontend/src/types/: game.ts
src/: App.tsx  index.css
src/__tests__/: api.test.ts  gameLogic.test.ts
src/components/game/: GameBoard.tsx  GameControls.tsx  GameOverOverlay.tsx  SnakeGame.tsx
src/components/layout/: Header.tsx
src/components/ui/: button.tsx
src/pages/: Auth.tsx  Index.tsx  Leaderboard.tsx  Spectate.tsx
src/services/: api.ts
